collection-sect done

--- a/index.html
+++ b/index.html
@@ -10,13 +10,7 @@
   <body class="root">
     <header class="header">
       <div class="header__menu-wraper">
-        <button class="header__menu-btn" type="button">
-          <img
-            src="./images/icon_menu.svg"
-            alt="Открыть меню"
-            class="header__menu-icon"
-          />
-        </button>
+        <button class="header__menu-btn" type="button"></button>
       </div>
       <h1 class="header__hero">nike x mmw training 4.0</h1>
     </header>
@@ -65,9 +59,38 @@
             исполнения и исключительную выразительность.
           </p>
         </div>
+        <div class="goods__poster"></div>
       </section>
     </main>
-    <footer class="footer"></footer>
-    <nav class="nav"></nav>
+    <footer class="footer">
+      <h2 class="footer__subscribe">подписаться</h2>
+      <p class="footer__subscribe-text">
+        Укажите свой email чтобы быть в курсе даты релиза, и других новостей
+        о коллекции
+      </p>
+      <form action="" class="footer__input-form">
+        <input
+          type="email"
+          class="footer__email-field"
+          placeholder="Введите email"
+        />
+        <button class="footer__subscribe-button" type="submit">
+          подписаться
+        </button>
+      </form>
+      <p class="footer__copyright-info">
+        &copy;Nike, Inc., 2021. Какие-то права защищены.
+      </p>
+    </footer>
+    <nav class="nav">
+      <div class="nav__close-button-wraper">
+        <button class="nav__close-btn" type="button"></button>
+      </div>
+      <div class="nav__menu">
+        <a href="" class="nav__menu-item">о коллекции</a
+        ><a href="" class="nav__menu-item">товары</a
+        ><a href="" class="nav__menu-item">подписаться</a>
+      </div>
+    </nav>
   </body>
 </html>
