html&css done w/o gallery in goods-sect

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         &copy;Nike, Inc., 2021. Какие-то права защищены.
       </p>
     </footer>
-    <nav class="nav">
+    <nav class="nav nav__opened">
       <div class="nav__close-button-wraper">
         <button class="nav__close-btn" type="button"></button>
       </div>
@@ -94,5 +94,6 @@
         ><a href="#subscribe" class="nav__menu-item">подписаться</a>
       </div>
     </nav>
+    <script src="./scripts/index.js" defer></script>
   </body>
 </html>
