js added + route to image in scss fixed

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         &copy;Nike, Inc., 2021. Какие-то права защищены.
       </p>
     </footer>
-    <nav class="nav nav__opened">
+    <nav class="nav">
       <div class="nav__close-button-wraper">
         <button class="nav__close-btn" type="button"></button>
       </div>
