layout done (but nb - scrollbar)

--- a/index.html
+++ b/index.html
@@ -49,41 +49,44 @@
       </section>
       <section class="goods" id="goods">
         <h2 class="goods__header">товары</h2>
-
-        <ul class="goods__cards-container">
-          <li class="goods__card">
-            <img src="./images/nikelab3.png" alt="" class="goods__photo" />
-            <button type="button" class="goods__buy-btn">купить</button>
-          </li>
-          <li class="goods__card">
-            <img src="./images/nikelab4.png" alt="" class="goods__photo" />
-            <button type="button" class="goods__buy-btn">купить</button>
-          </li>
-          <li class="goods__card">
-            <img src="./images/nikelab5.png" alt="" class="goods__photo" />
-            <button type="button" class="goods__buy-btn">купить</button>
-          </li>
-          <li class="goods__card">
-            <img src="./images/nikelab6.png" alt="" class="goods__photo" />
-            <button type="button" class="goods__buy-btn">купить</button>
-          </li>
-          <li class="goods__card">
-            <img src="./images/nikelab31.png" alt="" class="goods__photo" />
-            <button type="button" class="goods__buy-btn">купить</button>
-          </li>
-          <li class="goods__card">
-            <img src="./images/nikelab41.png" alt="" class="goods__photo" />
-            <button type="button" class="goods__buy-btn">купить</button>
-          </li>
-          <li class="goods__card">
-            <img src="./images/nikelab51.png" alt="" class="goods__photo" />
-            <button type="button" class="goods__buy-btn">купить</button>
-          </li>
-          <li class="goods__card">
-            <img src="./images/nikelab61.png" alt="" class="goods__photo" />
-            <button type="button" class="goods__buy-btn">купить</button>
-          </li>
-        </ul>
+        <div class="goods__scroll-wraper">
+          <ul class="goods__cards-container">
+            <li class="goods__card">
+              <img src="./images/nikelab3.png" alt="" class="goods__photo" />
+              <button type="button" class="goods__buy-btn">купить</button>
+            </li>
+            <li class="goods__card">
+              <img src="./images/nikelab4.png" alt="" class="goods__photo" />
+              <button type="button" class="goods__buy-btn">купить</button>
+            </li>
+            <li class="goods__card">
+              <img src="./images/nikelab5.png" alt="" class="goods__photo" />
+              <button type="button" class="goods__buy-btn">купить</button>
+            </li>
+            <li class="goods__card">
+              <img src="./images/nikelab6.png" alt="" class="goods__photo" />
+              <button type="button" class="goods__buy-btn">купить</button>
+            </li>
+            <li class="goods__card">
+              <img src="./images/nikelab31.png" alt="" class="goods__photo" />
+              <button type="button" class="goods__buy-btn">купить</button>
+            </li>
+            <li class="goods__card">
+              <img src="./images/nikelab41.png" alt="" class="goods__photo" />
+              <button type="button" class="goods__buy-btn">купить</button>
+            </li>
+            <li class="goods__card">
+              <img src="./images/nikelab51.png" alt="" class="goods__photo" />
+              <button type="button" class="goods__buy-btn">купить</button>
+            </li>
+            <li class="goods__card">
+              <img src="./images/nikelab61.png" alt="" class="goods__photo" />
+              <button type="button" class="goods__buy-btn">купить</button>
+            </li>
+          </ul>
+          <button class="goods__scroll-right"></button>
+          <button class="goods__scroll-left"></button>
+        </div>
         <div class="goods__summary">
           <p class="collection__text">
             Дисциплина — упражнение, которое ты практикуешь ежедневно. Ты учишь
