script fot scrollBtns done

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
               <button type="button" class="goods__buy-btn">купить</button>
             </li>
           </ul>
-          <button class="goods__scroll-right"></button>
-          <button class="goods__scroll-left"></button>
+          <button class="goods__scroll-right" type="button"></button>
+          <button class="goods__scroll-left" type="button"></button>
         </div>
         <div class="goods__summary">
           <p class="collection__text">
