html&layout fixed after review

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   </head>
   <body class="root">
     <header class="header">
-      <div class="header__menu-wraper">
-        <button class="header__menu-btn" type="button"></button>
-      </div>
+      <!-- <div class="header__menu-wraper"> -->
+      <button class="header__menu-btn" type="button"></button>
+      <!-- </div> -->
       <h1 class="header__hero">nike x mmw training 4.0</h1>
     </header>
     <main class="main">
@@ -33,7 +33,13 @@
             />
           </div>
         </div>
-        <div class="collection__poster"></div>
+        <!-- <div class="collection__poster"> -->
+        <img
+          src="./images/training.png"
+          alt="Вдохновители коллекции"
+          class="collection__poster"
+        />
+        <!-- </div> -->
         <div class="collection__summary">
           <p class="collection__motto">
             Тренинг — это не просто физическая активность
@@ -52,35 +58,67 @@
         <div class="goods__scroll-wraper">
           <ul class="goods__cards-container">
             <li class="goods__card">
-              <img src="./images/nikelab3.png" alt="" class="goods__photo" />
+              <img
+                src="./images/nikelab3.png"
+                alt="Фото элемента коллекции"
+                class="goods__photo"
+              />
               <button type="button" class="goods__buy-btn">купить</button>
             </li>
             <li class="goods__card">
-              <img src="./images/nikelab4.png" alt="" class="goods__photo" />
+              <img
+                src="./images/nikelab4.png"
+                alt="Фото элемента коллекции"
+                class="goods__photo"
+              />
               <button type="button" class="goods__buy-btn">купить</button>
             </li>
             <li class="goods__card">
-              <img src="./images/nikelab5.png" alt="" class="goods__photo" />
+              <img
+                src="./images/nikelab5.png"
+                alt="Фото элемента коллекции"
+                class="goods__photo"
+              />
               <button type="button" class="goods__buy-btn">купить</button>
             </li>
             <li class="goods__card">
-              <img src="./images/nikelab6.png" alt="" class="goods__photo" />
+              <img
+                src="./images/nikelab6.png"
+                alt="Фото элемента коллекции"
+                class="goods__photo"
+              />
               <button type="button" class="goods__buy-btn">купить</button>
             </li>
             <li class="goods__card">
-              <img src="./images/nikelab31.png" alt="" class="goods__photo" />
+              <img
+                src="./images/nikelab7.png"
+                alt="Фото элемента коллекции"
+                class="goods__photo"
+              />
               <button type="button" class="goods__buy-btn">купить</button>
             </li>
             <li class="goods__card">
-              <img src="./images/nikelab41.png" alt="" class="goods__photo" />
+              <img
+                src="./images/nikelab8.png"
+                alt="Фото элемента коллекции"
+                class="goods__photo"
+              />
               <button type="button" class="goods__buy-btn">купить</button>
             </li>
             <li class="goods__card">
-              <img src="./images/nikelab51.png" alt="" class="goods__photo" />
+              <img
+                src="./images/nikelab9.png"
+                alt="Фото элемента коллекции"
+                class="goods__photo"
+              />
               <button type="button" class="goods__buy-btn">купить</button>
             </li>
             <li class="goods__card">
-              <img src="./images/nikelab61.png" alt="" class="goods__photo" />
+              <img
+                src="./images/nikelab10.png"
+                alt="Фото элемента коллекции"
+                class="goods__photo"
+              />
               <button type="button" class="goods__buy-btn">купить</button>
             </li>
           </ul>
@@ -96,7 +134,12 @@
             исполнения и исключительную выразительность.
           </p>
         </div>
-        <div class="goods__poster"></div>
+        <!-- <div class="goods__poster"></div> -->
+        <img
+          src="./images/goods.png"
+          alt="Фото элементов коллекции"
+          class="goods__poster"
+        />
       </section>
     </main>
     <footer class="footer" id="subscribe">
@@ -105,7 +148,7 @@
         Укажите свой email чтобы быть в курсе даты релиза, и других новостей
         о коллекции
       </p>
-      <form action="" class="footer__input-form">
+      <form class="footer__input-form">
         <input
           type="email"
           class="footer__email-field"
