poster in header fixed after review

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <body class="root">
     <header class="header">
       <!-- <div class="header__menu-wraper"> -->
+      <img
+        src="./images/sportsman.png"
+        alt="Спортсмен"
+        class="header__poster"
+      />
       <button class="header__menu-btn" type="button"></button>
       <!-- </div> -->
       <h1 class="header__hero">nike x mmw training 4.0</h1>
