bem tree checked after review

--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
   </head>
   <body class="root">
     <header class="header">
-      <!-- <div class="header__menu-wraper"> -->
       <img
         src="./images/sportsman.png"
         alt="Спортсмен"
         class="header__poster"
       />
       <button class="header__menu-btn" type="button"></button>
-      <!-- </div> -->
+
       <h1 class="header__hero">nike x mmw training 4.0</h1>
     </header>
     <main class="main">
@@ -38,13 +37,13 @@
             />
           </div>
         </div>
-        <!-- <div class="collection__poster"> -->
+
         <img
           src="./images/training.png"
           alt="Вдохновители коллекции"
           class="collection__poster"
         />
-        <!-- </div> -->
+
         <div class="collection__summary">
           <p class="collection__motto">
             Тренинг — это не просто физическая активность
@@ -131,7 +130,7 @@
           <button class="goods__scroll-left" type="button"></button>
         </div>
         <div class="goods__summary">
-          <p class="collection__text">
+          <p class="goods__text">
             Дисциплина — упражнение, которое ты практикуешь ежедневно. Ты учишь
             свои разум и тело переносить суровые условия и достигать
             невозможного. Раскрой свою внутреннюю силу с новой коллекцией MMW, в
@@ -139,7 +138,7 @@
             исполнения и исключительную выразительность.
           </p>
         </div>
-        <!-- <div class="goods__poster"></div> -->
+
         <img
           src="./images/goods.png"
           alt="Фото элементов коллекции"
